--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "vitest": "catalog:"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=24",
+    "pnpm": ">=10"
   },
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
@@ -37,6 +38,7 @@
     "format:check": "syncpack format --check && NODE_OPTIONS=\"--experimental-strip-types\" prettier --check \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "lefthook install",
     "test": "vitest run",
     "test:watch": "vitest --watch"
