--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "ui": "stream",
+  "globalEnv": ["TAURI_DEV_HOST"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
