--- a/.github/workflows/actions/install-dependencies/action.yml
+++ b/.github/workflows/actions/install-dependencies/action.yml
@@ -10,7 +10,7 @@ runs:
     - name: Install Node.js
       uses: actions/setup-node@v5
       with:
-        node-version: 24
+        node-version: lts/krypton
         cache: 'pnpm'
 
     - name: Install dependencies
