--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,10 @@ on:
 
   pull_request:
 
+  merge_group:
+
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,6 +27,9 @@ jobs:
 
       - name: Build
         run: pnpm build
+
+      - name: Publish to pkg.pr.new
+        run: pnpm pkg-pr-new publish --pnpm --packageManager=pnpm './packages/*' --comment=off
 
   check-types:
     runs-on: ubuntu-latest
