chore(web): add vite-bundle-analyzer
Add vite-bundle-analyzer to the web app.

It's disabled by default.

To run it:

```shell
cd apps/web
pnpm run build -- --analyze
```

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "typescript": "catalog:",
     "typescript-eslint": "catalog:",
     "vite": "^7.1.12",
+    "vite-bundle-analyzer": "^1.2.3",
     "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^4.45.0"
   },
