--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@tailwindcss/postcss": "4.1.16",
     "@tailwindcss/vite": "4.1.16",
     "@tanstack/react-query": "5.90.5",
-    "@types/bun": "1.3.1",
+    "@types/bun": "1.3.2",
+    "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "effect": "3.19.3",
@@ -35,7 +36,8 @@
     "@commitlint/types": "^20.0.0",
     "@cspell/dict-es-es": "^3.0.8",
     "@radix-ui/react-select": "^2.2.6",
-    "@types/node": "^24.10.0",
+    "@types/bun": "catalog:",
+    "@types/node": "catalog:",
     "cspell": "^9.2.1",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
