--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "@workspace/ui": "workspace:*",
     "expo": "54.0.23",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
+    "lucide-react-native": "^0.554.0",
     "metro-config": "^0.83.3",
     "react": "19.2.0",
     "react-native": "0.81.5",
