--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,22 +3,24 @@
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
-    "@workspace/ui": "workspace:*",
-    "expo": "54.0.23",
+    "clsx": "^2.1.1",
+    "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "lucide-react-native": "^0.554.0",
     "metro-config": "^0.83.3",
-    "react": "19.2.0",
+    "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-mmkv": "^4.0.0",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "catalog:",
     "uniwind": "^1.0.1"
   },
   "devDependencies": {
-    "@expo/metro-config": "~54.0.2",
-    "@types/react": "~19.2.0",
+    "@types/react": "~19.1.10",
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
   },
@@ -28,6 +30,9 @@
   "scripts": {
     "android": "expo run:android",
     "dev": "expo start --clear --dev-client --reset-cache",
+    "doctor": "bun x expo-doctor@latest",
+    "install:check": "bun x expo install --check --bun",
+    "install:fix": "bun x expo install --fix --bun",
     "ios": "expo run:ios"
   },
   "type": "module",
