--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -5,8 +5,8 @@
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
+    "@workspace/explorer": "workspace:*",
     "@workspace/keypair": "workspace:*",
-    "@workspace/portfolio": "workspace:*",
     "@workspace/settings": "workspace:*",
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
