feat(extension): add icon to open and close sidebar

--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -13,7 +13,8 @@
     "@workspace/ui": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-router": "catalog:"
+    "react-router": "catalog:",
+    "wxt": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
