--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -18,7 +18,7 @@
     "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-react": "^1.1.3",
     "typescript": "catalog:",
-    "wxt": "^0.20.6"
+    "wxt": "catalog:"
   },
   "name": "extension",
   "private": true,
