--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript-eslint": "8.46.2",
     "vitest": "4.0.7",
     "ws": "8.18.3",
+    "wxt": "^0.20.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
