--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,9 +11,9 @@
     "@tauri-apps/cli": "^2",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "catalog:",
     "@workspace/config-typescript": "workspace:*",
-    "babel-plugin-react-compiler": "^1.0.0",
+    "babel-plugin-react-compiler": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "^7.0.4"
