--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -14,11 +14,11 @@
     "@tailwindcss/vite": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-react": "^1.1.3",
-    "babel-plugin-react-compiler": "^1.0.0",
+    "babel-plugin-react-compiler": "catalog:",
     "typescript": "catalog:",
     "wxt": "catalog:"
   },
