--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@solana/kit": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
