style(linter): enable no useless else rule

--- a/biome.json
+++ b/biome.json
@@ -68,6 +68,7 @@
       },
       "recommended": true,
       "style": {
+        "noUselessElse": "error",
         "useComponentExportOnlyModules": {
           "options": {
             "allowConstantExport": true
