--- a/packages/onboarding/package.json
+++ b/packages/onboarding/package.json
@@ -9,8 +9,6 @@
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:",
     "react-router": "catalog:"
   },
   "devDependencies": {
@@ -25,6 +23,10 @@
   },
   "license": "MIT",
   "name": "@workspace/onboarding",
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
+  },
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
