--- a/packages/portfolio/package.json
+++ b/packages/portfolio/package.json
@@ -12,8 +12,6 @@
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-router": "catalog:",
     "zod": "catalog:"
@@ -30,6 +28,10 @@
   },
   "license": "MIT",
   "name": "@workspace/portfolio",
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
+  },
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
