--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -10,8 +10,6 @@
     "@workspace/keypair": "workspace:*",
     "@workspace/solana-client": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-router": "catalog:",
     "zod": "catalog:"
@@ -28,6 +26,10 @@
   },
   "license": "MIT",
   "name": "@workspace/settings",
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
+  },
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
