--- a/packages/solana-client-react/package.json
+++ b/packages/solana-client-react/package.json
@@ -6,9 +6,7 @@
     "@workspace/db-react": "workspace:*",
     "@workspace/keypair": "workspace:*",
     "@workspace/solana-client": "workspace:*",
-    "@workspace/ui": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:"
+    "@workspace/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
@@ -23,6 +21,10 @@
   },
   "license": "MIT",
   "name": "@workspace/solana-client-react",
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
+  },
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
