--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -6,6 +6,7 @@
     "@wallet-standard/core": "^1.1.1",
     "@webext-core/messaging": "^2.3.0",
     "@webext-core/proxy-service": "^1.2.1",
+    "@webext-core/storage": "1.2.0",
     "@workspace/db": "workspace:*",
     "@workspace/keypair": "workspace:*",
     "@workspace/ui": "workspace:*",
