--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -7,13 +7,11 @@
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "catalog:",
     "@tauri-apps/cli": "2.9.4",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react": "catalog:",
     "@workspace/config-typescript": "workspace:*",
-    "babel-plugin-react-compiler": "catalog:",
+    "@workspace/config-vite": "workspace:*",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:"
