--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@tanstack/query-async-storage-persister": "5.90.13",
+    "@tanstack/query-sync-storage-persister": "5.90.13",
     "@tanstack/react-query": "catalog:",
+    "@tanstack/react-query-persist-client": "5.90.13",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
     "@workspace/dev": "workspace:*",
