--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vite": "workspace:*",
+    "babel-plugin-react-compiler": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:"
