--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vite": "workspace:*",
+    "babel-plugin-react-compiler": "catalog:",
     "globals": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
